[metadata]
name = kind-cluster-setup
version = 0.1.0
description = A tool for setting up Kind clusters with independent app deployments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/kind-cluster-setup
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    PyYAML>=5.4.1
    kubernetes>=17.17.0
    click>=8.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kind-cluster-setup = kind_cluster_setup.main:main